--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,20 @@ body {
     overflow-x: hidden;
 }
 
+#menu-container {
+    background: linear-gradient(0deg, rgba(249, 249, 249, 1) 85%, rgba(175, 175, 175, 1) 100%) no-repeat, rgba(249, 249, 249, 1) 85%;
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(-5%);
+    }
+}
+
 @keyframes logoUp {
     0% {
         opacity: 0%;
