--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 body {
     background: linear-gradient(0deg, rgba(249, 249, 249, 1) 85%, rgba(175, 175, 175, 1) 100%) no-repeat, rgba(249, 249, 249, 1) 85%;
     background-size: screen;
-    overflow-x: hidden;
+    overflow-x: clip;
 }
 
 #menu-container {
