--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@ body {
     background: linear-gradient(0deg, rgba(249, 249, 249, 1) 85%, rgba(175, 175, 175, 1) 100%) no-repeat, rgba(249, 249, 249, 1) 85%;
     background-size: screen;
     overflow-x: clip;
+    padding-top: env(safe-area-inset-top);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 #menu-container {
@@ -68,35 +72,56 @@ body {
 
 /* HTML: <div class="loader"></div> */
 .loader {
-  height: 15px;
-  aspect-ratio: 5;
-  display: flex;
-  justify-content: space-between;
-  --_g: no-repeat radial-gradient(farthest-side,rgb(231,92,92) 95%,#0000);
-  background: var(--_g),var(--_g);
-  background-size: 20% 100%;
-  animation: l42-0 1.3s infinite ease-in-out;
+    height: 15px;
+    aspect-ratio: 5;
+    display: flex;
+    justify-content: space-between;
+    --_g: no-repeat radial-gradient(farthest-side, rgb(231, 92, 92) 95%, #0000);
+    background: var(--_g), var(--_g);
+    background-size: 20% 100%;
+    animation: l42-0 1.3s infinite ease-in-out;
 }
+
 .loader:before,
 .loader:after {
-  content: "";
-  height: inherit;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  background: rgb(231,92,92);
-  animation: l42-1 1.3s infinite ease-in-out; 
+    content: "";
+    height: inherit;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: rgb(231, 92, 92);
+    animation: l42-1 1.3s infinite ease-in-out;
 }
+
 .loader:after {
-  --s:-1,-1;
+    --s: -1, -1;
 }
+
 @keyframes l42-0 {
-  0%,
-  60%  {background-position: calc(1*100%/3) 0, calc(2*100%/3) 0}
-  100% {background-position: calc(0*100%/3) 0, calc(3*100%/3) 0}
+
+    0%,
+    60% {
+        background-position: calc(1*100%/3) 0, calc(2*100%/3) 0
+    }
+
+    100% {
+        background-position: calc(0*100%/3) 0, calc(3*100%/3) 0
+    }
 }
+
 @keyframes l42-1 {
-  0%   {transform: scale(var(--s,1)) translate(0           ,0)}
-  33%  {transform: scale(var(--s,1)) translate(0           ,130%)}
-  66%  {transform: scale(var(--s,1)) translate(calc(400%/3),130%)}
-  100% {transform: scale(var(--s,1)) translate(calc(400%/3),0)}
+    0% {
+        transform: scale(var(--s, 1)) translate(0, 0)
+    }
+
+    33% {
+        transform: scale(var(--s, 1)) translate(0, 130%)
+    }
+
+    66% {
+        transform: scale(var(--s, 1)) translate(calc(400%/3), 130%)
+    }
+
+    100% {
+        transform: scale(var(--s, 1)) translate(calc(400%/3), 0)
+    }
 }
